# LuNA-Static-Analysis-Repository

./: .gitignore  Makefile  README.MD  README.md  adapt-install.sh  adapt.cpp  compile.sh  errors.md  in.json  jsonprinter.py  main.cpp  main1.cpp  report_templates.json  run.sh
DeGSA/: README.md  README.txt  a.out  ast.hpp  ast1.hpp  classes.hpp  common.py  compile.sh  ddg.cpp  enums.hpp  error_reporter.hpp  expr.cpp  expr.hpp  grammar.tab.hpp  grammar.ypp  ids.cpp  ids.hpp  json_reporter.cpp  json_reporter.hpp  launch.bat  launch.sh  lexics.l  main.cpp  pp.py  prepr.fa  sample.fa  source.fa  tempsource.fa  vertices.cpp  vertices.hpp
DeGSA/luna/: diplomaBaseDFNameEx.fa  diplomaEx1.fa  diplomaIndexedDFNameEx.fa  example.fa  forreport.fa  source.fa  sourceold.fa  tempsource.fa
DeGSA/prototypes/: launch.sh  main.cpp
DeGSA/src/: classes.hpp  ddg.cpp  declaration.hpp  enums.hpp  expr.cpp  expr.hpp  facts.hpp  global.hpp  ids.cpp  ids.hpp  json_reporter.cpp  main.cpp  vertices.cpp  vertices.hpp
DeGSA/symengine-0.14.0/: readme.md
ast_analyzer/: CMakeLists.txt  LuNA-error-analyzer.code-workspace  Makefile  README.md  a.out  ast.json  ast_analyzer.cpp  ast_analyzer.hpp  ast_json_reporter.cpp  ast_test.cpp  ast_tester.hpp  base_analyzer.hpp  c_ast.cpp  cf_redecl_analyzer.hpp  cpp_func_analyzer.hpp  df_redecl_analyzer.hpp  error_reporter.hpp  errors.json  existance_main_analyzer.hpp  get_time.cpp  grammar.tab.cpp  grammar.tab.hpp  lex.yy.cpp  main.cpp  shadow_import_analyzer.hpp  task_scheduler.cpp  undecl_func_analyzer.hpp  undecl_names_analyzer.cpp  undecl_names_analyzer.hpp  unused_names_analyzer.hpp  utils.cpp
ast_analyzer/error_message/: df.hpp  error_entry.hpp
ast_analyzer/test_llvm/: CMakeLists.txt  FindClassDecls.cpp
ast_analyzer/tests/: CMakeLists.txt  test_serialize.cpp
ast_analyzer/tests/complex_tests/: 1.fa
ast_analyzer/tests/test_analyzer/: .test.fa.swp  .ucodes.cpp.swp  t.fa  t1.fa~  test.fa  test1.fa  test2.fa  test2_copy.fa  test_arith_expr_type.fa  test_ast.fa  test_call.fa  test_define.fa  test_df_redecl.fa  test_find_unused_variables.fa  test_import.fa  test_no_main.fa  test_parmaters.fa  test_recursion_in_luna.fa  test_recursion_in_luna.fa~  test_redcls_1.fa  test_types.fa  test_types1.fa  test_types123.fa  test_types2.fa  test_var_redecl.fa  ucodes.cpp
ast_analyzer/tests/test_cf/: cf_inner_for.fa  cf_inner_if.fa  simple_cf_grammar.fa
ast_analyzer/tests/test_for/: inner_for.fa  simple_for_grammar.fa
ast_analyzer/tests/test_for_report/: .redecls.fa.swp  if.fa  incorrect_import  incorrect_import.fa  redecls.fa~  rts.80s-2700,ub.btr  rts.80s-2737,ub.btr  ucodes.cpp
ast_analyzer/tests/test_if/: complex_id.fa  simple_if_grammar.fa  test_comparator.fa  test_inner_if.fa
ast_analyzer/tests/test_import/: different_parameters.fa  invalid_type.fa  invalid_type1.fa  many_parameters.fa  no_as.fa  no_bracket.fa  no_comma.fa  no_kw_import.fa  no_parameters.fa  with_cuda.fa  with_cuda_nocpu.fa
ast_analyzer/tests/test_let/: inner_let.fa  simple_let_grammar.fa
ast_analyzer/tests/test_new_error_msg_format/: df_redecl.fa  import_redecl.fa  invalid_call.fa  large_test.fa  luna10.fa  luna11.fa  luna12.fa  luna13.fa  luna14.fa  luna16.fa  luna2.fa  luna34.fa  luna38.fa  luna39.fa  luna4.fa  luna6.fa  no_main.fa  no_such_cf.fa  redecl_cf.fa  uncdel_names.fa
ast_analyzer/tests/test_recursion/: simple_recursion.fa
ast_analyzer/tests/test_serialize/: ast.json  basic1a.fa  import.fa  let.fa  test_import_selialize.fa  test_recom.fa  ucodes.cpp
ast_analyzer/tests/test_sub_def/: many_funcs.fa  no_body.fa  no_statement_seq.fa  ok.fa  with_df.fa
ast_analyzer/tests/test_time/: disk.fa  progonka.fa
ast_analyzer/tests/test_types/: cast_tests.fa  ucodes.cpp
ast_analyzer/tests/test_visualizer/: 1.fa  2.fa  3.fa
ast_analyzer/tests/test_while/: simple_while_grammar.fa
ast_analyzer/threadpool/: threadpool-test.cpp  threadpool.cpp  threadpool.h
demos/for-conditional-conditions-error/: main.fa
demos/for-conditional-loops-error/: main.fa
demos/for-error/: main.fa  ucodes.cpp
demos/for-init-outside-loop/: main.fa
demos/for-init-outside-loop-complex/: main.fa  ucodes.cpp
demos/for-ok/: main.fa
demos/for-ok-simple/: main.fa
demos/for-overlap/: main.fa
demos/for-overlap-nested-ifs/: main.fa
demos/for-refs-as-bounds/: main.fa
error_message/: error_entry.hpp
errors/: errors.md  format_suggestions.md  formats.md  general_suggestions.md
errors/demos/: 1.1-err-luna-compiler-bug.fa  1.1-err-so-build-failed.fa  1.1-ok-cast.fa  1.2-err.fa  8.1-ok-never-referenced.fa  8.2-ok-unused-parameter.fa  8.3-ok-initialized-never-consumed.fa
llvm-manager/: CMakeLists.txt  README.md  manager.py
llvm-manager/BiLangIR/: CMakeLists.txt  README.md  build.sh
llvm-manager/BiLangIR/src/: codegen.cpp  codegen.hpp  creaters.cpp  creaters.hpp  debug.hpp  depends.hpp  error_handler.hpp  error_nodes.hpp  main.cpp  nodes.hpp
llvm-manager/PhASAR-advisor/: CALLGRAPH_README.md  CMakeLists.txt  README.md
llvm-manager/PhASAR-advisor/src/: dependes.hpp  error_nodes.hpp  html_reporter.hpp  main.cpp  report_style.css
llvm-manager/PhASAR-advisor/src/analyses/: AliasInfo.cpp  AliasInfo.hpp  BasicInfo.cpp  BasicInfo.hpp  CallGraph.cpp  CallGraph.hpp  CodeComplexity.cpp  CodeComplexity.hpp  ConstantPropagation.cpp  ConstantPropagation.hpp  TaintAnalysis.cpp  TaintAnalysis.hpp  TypeAnalysis.cpp  TypeAnalysis.hpp  UninitializedVariables.cpp  UninitializedVariables.hpp
mc-analyzer/: .gitignore  README.md  jest.config.ts  main.fa  package.json  run  tsconfig.json
mc-analyzer/test/: Model3DTaskConvProgonka.fa  gauss.fa  main.fa  main2.fa  main3.fa  main4.fa  sem2_1.fa  sem3_1.fa  sem3_2.fa  sem3_6.fa  sem4.fa  sem5.fa  sem6.fa  ucodes.cpp
parser/: ast.hpp  globals.cpp  grammar.ypp  lexics.l
prolog-analyzer/: README.MD  requirements.txt
prolog-analyzer/tests/: runner.py
reporter/: adapt_output_generator.py  found_errors.json  manual.md  report_templates.json
scripts/: adapt.py
scripts/reporter/: README.MD  adapt_output_generator.py  report_templates.json
(+182 files in other folders)
